test/log/reduction/vardotacc_vv_i32_m1.txt
vardotacc_vv_i32_m1.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_i32_m1.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_i32_m1.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vardotacc_vv_i32_m1.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vardotacc_vv_i32_m1.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vardotacc_vv_i32_m1.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vardotacc_vv_i32_m1.c:22:6: warning: no previous prototype for 'vardotacc_vv_i32_m1_golden' [-Wmissing-prototypes]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32_m1.c: In function 'vardotacc_vv_i32_m1_golden':
vardotacc_vv_i32_m1.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vardotacc_vv_i32_m1.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_i32_m1.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vardotacc_vv_i32_m1.c:22:41: warning: unused parameter 'dst_mask' [-Wunused-parameter]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                 ~~~~~~~~^~~~~~~~
vardotacc_vv_i32_m1.c:22:59: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                  ~~~~~~~~~^
vardotacc_vv_i32_m1.c:22:70: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                             ~~~~~~~~~^
vardotacc_vv_i32_m1.c:22:81: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                        ~~~~~~~~~^
vardotacc_vv_i32_m1.c:22:92: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                                   ~~~~~~~~~^~~~~~~~~~
vardotacc_vv_i32_m1.c: In function 'main':
vardotacc_vv_i32_m1.c:44:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   44 |     data_init_bool(dst_mask, exp_dst_mask, 8, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vardotacc_vv_i32_m1.c:48:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   48 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vardotacc_vv_i32_m1.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vardotacc_vv_i32_m1.c:48:5: error: 'data_init_scalar' undeclared (first use in this function)
   48 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vardotacc_vv_i32_m1.c:51:32: error: incompatible type for argument 1 of 'vardotacc_vv_i32_m1_golden'
   51 |     vardotacc_vv_i32_m1_golden(exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                ^~~~~~~~~~~~
      |                                |
      |                                uint64_t * {aka long long unsigned int *}
vardotacc_vv_i32_m1.c:22:41: note: expected 'bool8_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                 ~~~~~~~~^~~~~~~~
vardotacc_vv_i32_m1.c:51:63: error: incompatible type for argument 5 of 'vardotacc_vv_i32_m1_golden'
   51 |     vardotacc_vv_i32_m1_golden(exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                                               ^~~~~~~~~
      |                                                               |
      |                                                               enum ACCUM
vardotacc_vv_i32_m1.c:22:92: note: expected 'int64_t *' {aka 'long long int *'} but argument is of type 'enum ACCUM'
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                                   ~~~~~~~~~^~~~~~~~~~
vardotacc_vv_i32_m1.c:51:5: error: too many arguments to function 'vardotacc_vv_i32_m1_golden'
   51 |     vardotacc_vv_i32_m1_golden(exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32_m1.c:22:6: note: declared here
   22 | void vardotacc_vv_i32_m1_golden(bool8_t dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32_m1.c:54:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   54 |     result = vardotacc_vv_i32_m1(dst_mask,a,b,c,accum);
      |     ^~~~~~
vardotacc_vv_i32_m1.c:54:43: error: incompatible type for argument 2 of 'vardotacc_vv_i32_m1'
   54 |     result = vardotacc_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                           ^
      |                                           |
      |                                           int32x16_t
In file included from vardotacc_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2008:45: note: expected 'int64x8_t' but argument is of type 'int32x16_t'
 2008 | vardotacc_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                   ~~~~~~~~~~^~~
vardotacc_vv_i32_m1.c:54:45: error: incompatible type for argument 3 of 'vardotacc_vv_i32_m1'
   54 |     result = vardotacc_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                             ^
      |                                             |
      |                                             int16x32_t
In file included from vardotacc_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2008:61: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2008 | vardotacc_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                                  ~~~~~~~~~~~^~~
vardotacc_vv_i32_m1.c:54:47: error: incompatible type for argument 4 of 'vardotacc_vv_i32_m1'
   54 |     result = vardotacc_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                               ^
      |                                               |
      |                                               int16x32_t
In file included from vardotacc_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2008:77: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2008 | vardotacc_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                                                  ~~~~~~~~~~~^~~
vardotacc_vv_i32_m1.c:59:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   59 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vardotacc_vv_i32_m1.c:59:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   59 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i32_m1.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_i32_m1"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_i32_m1.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i32_m1.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed